--- a/Unit_19_Starter_Template/Unit_18_HW_Template/css/style.css
+++ b/Unit_19_Starter_Template/Unit_18_HW_Template/css/style.css
@@ -35,9 +35,9 @@ button {
   border-radius: 4px;
 }
 footer {
-  background-color: #373738;
+  background-color: #c4d7b4;
   padding: 5px;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 footer ul {
   list-style: none;
